UPDATE, experimenting with vanilla-tilt and glassmorphism

--- a/API/bigquery/ML/AngularApp/src/app/template.component.html
+++ b/API/bigquery/ML/AngularApp/src/app/template.component.html
@@ -56,6 +56,7 @@
 			appNest [nest] = "ryber.appAvailble( a.extras[1][bb], 'appNest')"
 			appDeltaNode [deltaNode] = "ryber.appAvailble( a.extras[1][bb], 'appDeltaNode')"
             appLatch [latch] = "ryber.appAvailble( a.extras[1][bb], 'appLatch')"
+            appVanillaTilt [vanillaTilt] = "ryber.appAvailble( a.extras[1][bb], 'appVanillaTilt')"
 			*ngIf= "a.bool[1][bb] ==='h1' else elseBlock2"
 			class = {{a.val[1][bb]}}
 			[ngStyle] = 'a.ngCss[1][bb]'
@@ -68,6 +69,7 @@
 			appNest [nest] = "ryber.appAvailble( a.extras[1][bb], 'appNest')"
 			appDeltaNode [deltaNode] = "ryber.appAvailble( a.extras[1][bb], 'appDeltaNode')"
             appLatch [latch] = "ryber.appAvailble( a.extras[1][bb], 'appLatch')"
+            appVanillaTilt [vanillaTilt] = "ryber.appAvailble( a.extras[1][bb], 'appVanillaTilt')"
             *ngIf= "a.bool[1][bb] ==='h2' else elseBlock3"
             class = {{a.val[1][bb]}}
             [ngStyle] = 'a.ngCss[1][bb]'
@@ -80,6 +82,7 @@
 			appNest [nest] = "ryber.appAvailble( a.extras[1][bb], 'appNest')"
 			appDeltaNode [deltaNode] = "ryber.appAvailble( a.extras[1][bb], 'appDeltaNode')"
             appLatch [latch] = "ryber.appAvailble( a.extras[1][bb], 'appLatch')"
+            appVanillaTilt [vanillaTilt] = "ryber.appAvailble( a.extras[1][bb], 'appVanillaTilt')"
             *ngIf= "a.bool[1][bb] ==='h3' else elseBlock4"
             class = {{a.val[1][bb]}}
             [ngStyle] = 'a.ngCss[1][bb]'
@@ -91,6 +94,7 @@
 			appNest [nest] = "ryber.appAvailble( a.extras[1][bb], 'appNest')"
 			appDeltaNode [deltaNode] = "ryber.appAvailble( a.extras[1][bb], 'appDeltaNode')"
             appLatch [latch] = "ryber.appAvailble( a.extras[1][bb], 'appLatch')"
+            appVanillaTilt [vanillaTilt] = "ryber.appAvailble( a.extras[1][bb], 'appVanillaTilt')"
             *ngIf= "a.bool[1][bb] ==='h4' else elseBlock5"
             class = {{a.val[1][bb]}}
             [ngStyle] = 'a.ngCss[1][bb]'
@@ -103,6 +107,7 @@
 			appNest [nest] = "ryber.appAvailble( a.extras[1][bb], 'appNest')"
 			appDeltaNode [deltaNode] = "ryber.appAvailble( a.extras[1][bb], 'appDeltaNode')"
             appLatch [latch] = "ryber.appAvailble( a.extras[1][bb], 'appLatch')"
+            appVanillaTilt [vanillaTilt] = "ryber.appAvailble( a.extras[1][bb], 'appVanillaTilt')"
             *ngIf= "a.bool[1][bb] ==='h5' else elseBlock6"
             class = {{a.val[1][bb]}}
             [ngStyle] = 'a.ngCss[1][bb]'
@@ -114,6 +119,7 @@
 			appNest [nest] = "ryber.appAvailble( a.extras[1][bb], 'appNest')"
 			appDeltaNode [deltaNode] = "ryber.appAvailble( a.extras[1][bb], 'appDeltaNode')"
             appLatch [latch] = "ryber.appAvailble( a.extras[1][bb], 'appLatch')"
+            appVanillaTilt [vanillaTilt] = "ryber.appAvailble( a.extras[1][bb], 'appVanillaTilt')"
             *ngIf= "a.bool[1][bb] ==='h6' else elseBlock7"
             class = {{a.val[1][bb]}}
             [ngStyle] = 'a.ngCss[1][bb]'
@@ -127,6 +133,7 @@
 			appLatch [latch] = "ryber.appAvailble( a.extras[1][bb], 'appLatch')"
             appInputHandle [inputHandle] = "ryber.appAvailble( a.extras[1][bb], 'appInputHandle')"
             toggleButton [stuff] ="ryber.appAvailble( a.extras[1][bb], 'toggleButton')"
+            appVanillaTilt [vanillaTilt] = "ryber.appAvailble( a.extras[1][bb], 'appVanillaTilt')"
             #myVal
             *ngIf= "a.bool[1][bb] ==='a' else elseBlock8"
             class = {{a.val[1][bb]}}
@@ -141,6 +148,7 @@
 			appDeltaNode [deltaNode] = "ryber.appAvailble( a.extras[1][bb], 'appDeltaNode')"
             appWebRTC [webRTC] = "ryber.appAvailble( a.extras[1][bb], 'appWebRTC')"
             appNest [nest] = "ryber.appAvailble( a.extras[1][bb], 'appNest')"
+            appVanillaTilt [vanillaTilt] = "ryber.appAvailble( a.extras[1][bb], 'appVanillaTilt')"
             appNavigation [navigation] = "ryber.appAvailble( a.extras[1][bb], 'appNavigation')"
             appLatch [latch] = "ryber.appAvailble( a.extras[1][bb], 'appLatch')"
             *ngIf= "a.bool[1][bb] ==='p' else elseBlock9"
@@ -155,6 +163,7 @@
 			appNest [nest] = "ryber.appAvailble( a.extras[1][bb], 'appNest')"
 			appDeltaNode [deltaNode] = "ryber.appAvailble( a.extras[1][bb], 'appDeltaNode')"
             appLatch [latch] = "ryber.appAvailble( a.extras[1][bb], 'appLatch')"
+            appVanillaTilt [vanillaTilt] = "ryber.appAvailble( a.extras[1][bb], 'appVanillaTilt')"
             *ngIf= "a.bool[1][bb] ==='code' else elseBlock10"
             class = {{a.val[1][bb]}}
             [ngStyle] = 'a.ngCss[1][bb]'
@@ -167,6 +176,7 @@
 			appNest [nest] = "ryber.appAvailble( a.extras[1][bb], 'appNest')"
 			appDeltaNode [deltaNode] = "ryber.appAvailble( a.extras[1][bb], 'appDeltaNode')"
             appLatch [latch] = "ryber.appAvailble( a.extras[1][bb], 'appLatch')"
+            appVanillaTilt [vanillaTilt] = "ryber.appAvailble( a.extras[1][bb], 'appVanillaTilt')"
             *ngIf= "a.bool[1][bb] ==='span' else elseBlock11"
             class = {{a.val[1][bb]}}
             [ngStyle] = 'a.ngCss[1][bb]'
@@ -179,6 +189,7 @@
 			appNest [nest] = "ryber.appAvailble( a.extras[1][bb], 'appNest')"
 			appDeltaNode [deltaNode] = "ryber.appAvailble( a.extras[1][bb], 'appDeltaNode')"
             appLatch [latch] = "ryber.appAvailble( a.extras[1][bb], 'appLatch')"
+            appVanillaTilt [vanillaTilt] = "ryber.appAvailble( a.extras[1][bb], 'appVanillaTilt')"
             *ngIf= "a.bool[1][bb] ==='strong' else elseBlock12"
             class = {{a.val[1][bb]}}
             [ngStyle] = 'a.ngCss[1][bb]'
@@ -192,6 +203,7 @@
             appLatch [latch] = "ryber.appAvailble( a.extras[1][bb], 'appLatch')"
             appNest [nest] = "ryber.appAvailble( a.extras[1][bb], 'appNest')"
             appExtend [extend] = "ryber.appAvailble( a.extras[1][bb], 'extend')"
+            appVanillaTilt [vanillaTilt] = "ryber.appAvailble( a.extras[1][bb], 'appVanillaTilt')"
             appInputHandle [inputHandle] = "ryber.appAvailble( a.extras[1][bb], 'appInputHandle')"
             appMoneyClick [moneyClick] = "ryber.appAvailble( a.extras[1][bb], 'appMoneyClick')"
             appFocusFont [focusFont] = "ryber.appAvailble( a.extras[1][bb], 'appFocusFont')"
@@ -210,6 +222,7 @@
             appMoneyClick [moneyClick] = "ryber.appAvailble( a.extras[1][bb], 'appMoneyClick')"
             appFocusFont [focusFont] = "ryber.appAvailble( a.extras[1][bb], 'appFocusFont')"
             appLatch [latch] = "ryber.appAvailble( a.extras[1][bb], 'appLatch')"
+            appVanillaTilt [vanillaTilt] = "ryber.appAvailble( a.extras[1][bb], 'appVanillaTilt')"
             #myVal
             *ngIf= "a.bool[1][bb] ==='ta' else elseBlock14"
             class = {{a.val[1][bb]}}
@@ -224,6 +237,7 @@
             appWebRTC [webRTC] = "ryber.appAvailble( a.extras[1][bb], 'appWebRTC')"
             appInputHandle [inputHandle] = "ryber.appAvailble( a.extras[1][bb], 'appInputHandle')"
             appSignPad [signPad]="ryber.appAvailble( a.extras[1][bb],'appSignPad')"
+            appVanillaTilt [vanillaTilt] = "ryber.appAvailble( a.extras[1][bb], 'appVanillaTilt')"
             appLatch [latch] = "ryber.appAvailble( a.extras[1][bb], 'appLatch')"
             #myVal
             *ngIf= "a.bool[1][bb] ==='c' else elseBlock15"
@@ -237,6 +251,7 @@
 			appNest [nest] = "ryber.appAvailble( a.extras[1][bb], 'appNest')"
 			appDeltaNode [deltaNode] = "ryber.appAvailble( a.extras[1][bb], 'appDeltaNode')"
             appLatch [latch] = "ryber.appAvailble( a.extras[1][bb], 'appLatch')"
+            appVanillaTilt [vanillaTilt] = "ryber.appAvailble( a.extras[1][bb], 'appVanillaTilt')"
             *ngIf= "a.bool[1][bb] ==='l' else elseBlock16"
             class = {{a.val[1][bb]}}
             [ngStyle] = 'a.ngCss[1][bb]'
@@ -248,6 +263,7 @@
 			appNest [nest] = "ryber.appAvailble( a.extras[1][bb], 'appNest')"
 			appDeltaNode [deltaNode] = "ryber.appAvailble( a.extras[1][bb], 'appDeltaNode')"
             appLatch [latch] = "ryber.appAvailble( a.extras[1][bb], 'appLatch')"
+            appVanillaTilt [vanillaTilt] = "ryber.appAvailble( a.extras[1][bb], 'appVanillaTilt')"
             *ngIf= "a.bool[1][bb] ==='ul' else elseBlock17"
             class = {{a.val[1][bb]}}
             [ngStyle] = 'a.ngCss[1][bb]'
@@ -263,19 +279,20 @@
 			[innerHTML] = 'a.text[1][bb].item'
 			appDeltaNode [deltaNode] = "ryber.appAvailble( a.extras[1][bb], 'appDeltaNode')"
             appLatch [latch] = "ryber.appAvailble( a.extras[1][bb], 'appLatch')"
+            appVanillaTilt [vanillaTilt] = "ryber.appAvailble( a.extras[1][bb], 'appVanillaTilt')"
             appExtend [extend] = "ryber.appAvailble( a.extras[1][bb], 'extend')" ></form>
         </ng-template>
         <ng-template #elseBlock18  >
 			<div
-				#myVal
-				appDeltaNode [deltaNode] = "ryber.appAvailble( a.extras[1][bb], 'appDeltaNode')"
-				appWebRTC [webRTC] = "ryber.appAvailble( a.extras[1][bb], 'appWebRTC')"
-				appGoogleMaps [googleMaps] = "ryber.appAvailble( a.extras[1][bb], 'appGoogleMaps')"
-				appNest [nest] = "ryber.appAvailble( a.extras[1][bb], 'appNest')"
-                appLatch [latch] = "ryber.appAvailble( a.extras[1][bb], 'appLatch')"
-				*ngIf= "a.bool[1][bb] ==='div'   else elseBlock19"
-				class = {{a.val[1][bb]}}
-				[ngStyle] = 'a.ngCss[1][bb]' >
+            #myVal
+            appDeltaNode [deltaNode] = "ryber.appAvailble( a.extras[1][bb], 'appDeltaNode')"
+            appNest [nest] = "ryber.appAvailble( a.extras[1][bb], 'appNest')"
+            appLatch [latch] = "ryber.appAvailble( a.extras[1][bb], 'appLatch')"
+            appVanillaTilt [vanillaTilt] = "ryber.appAvailble( a.extras[1][bb], 'appVanillaTilt')"
+
+            *ngIf= "a.bool[1][bb] ==='div'   else elseBlock19"
+            class = {{a.val[1][bb]}}
+            [ngStyle] = 'a.ngCss[1][bb]' >
 			</div>
 		</ng-template>
 		<ng-template #elseBlock19  >
@@ -284,6 +301,7 @@
 			appNest [nest] = "ryber.appAvailble( a.extras[1][bb], 'appNest')"
 			appDeltaNode [deltaNode] = "ryber.appAvailble( a.extras[1][bb], 'appDeltaNode')"
 			appExtend [extend] = "ryber.appAvailble( a.extras[1][bb], 'extend')"
+            appVanillaTilt [vanillaTilt] = "ryber.appAvailble( a.extras[1][bb], 'appVanillaTilt')"
             appLatch [latch] = "ryber.appAvailble( a.extras[1][bb], 'appLatch')"
             *ngIf= "a.bool[1][bb] ==='img' else elseBlock20"
             class = {{a.val[1][bb]}}
@@ -299,6 +317,7 @@
                 appFileHandler [fileHandler] = "ryber.appAvailble( a.extras[1][bb], 'appFileHandler')"
                 appLatch [latch] = "ryber.appAvailble( a.extras[1][bb], 'appLatch')"
                 appListModels [listModels] = "ryber.appAvailble( a.extras[1][bb], 'appListModels')"
+                appVanillaTilt [vanillaTilt] = "ryber.appAvailble( a.extras[1][bb], 'appVanillaTilt')"
                 *ngIf= "a.bool[1][bb] ==='b' else elseBlock22 "
                 class = {{a.val[1][bb]}}
                 [ngStyle] =  'a.ngCss[1][bb]'
@@ -313,6 +332,7 @@
 			appNest [nest] = "ryber.appAvailble( a.extras[1][bb], 'appNest')"
 			appDeltaNode [deltaNode] = "ryber.appAvailble( a.extras[1][bb], 'appDeltaNode')"
             appLatch [latch] = "ryber.appAvailble( a.extras[1][bb], 'appLatch')"
+            appVanillaTilt [vanillaTilt] = "ryber.appAvailble( a.extras[1][bb], 'appVanillaTilt')"
             *ngIf= "a.bool[1][bb] ==='embed' else elseBlock23"
             class = {{a.val[1][bb]}}
             [ngStyle] =  'a.ngCss[1][bb]'
@@ -325,6 +345,7 @@
             appNest [nest] = "ryber.appAvailble( a.extras[1][bb], 'appNest')"
             appLatch [latch] = "ryber.appAvailble( a.extras[1][bb], 'appLatch')"
             appExtend [extend] = "ryber.appAvailble( a.extras[1][bb], 'extend')"
+            appVanillaTilt [vanillaTilt] = "ryber.appAvailble( a.extras[1][bb], 'appVanillaTilt')"
             appWebRTC [webRTC] = "ryber.appAvailble( a.extras[1][bb], 'appWebRTC')"
             #myVal *ngIf= "a.bool[1][bb] ==='video' else elseBlock24"
             class = {{a.val[1][bb]}}
@@ -339,6 +360,7 @@
 			appNest [nest] = "ryber.appAvailble( a.extras[1][bb], 'appNest')"
 			appDeltaNode [deltaNode] = "ryber.appAvailble( a.extras[1][bb], 'appDeltaNode')"
             appLatch [latch] = "ryber.appAvailble( a.extras[1][bb], 'appLatch')"
+            appVanillaTilt [vanillaTilt] = "ryber.appAvailble( a.extras[1][bb], 'appVanillaTilt')"
             *ngIf= "a.bool[1][bb] ==='audio' else elseBlock25"
             class = {{a.val[1][bb]}}
             [ngStyle] ='a.ngCss[1][bb]'
@@ -351,6 +373,7 @@
 			appNest [nest] = "ryber.appAvailble( a.extras[1][bb], 'appNest')"
 			appDeltaNode [deltaNode] = "ryber.appAvailble( a.extras[1][bb], 'appDeltaNode')"
             appLatch [latch] = "ryber.appAvailble( a.extras[1][bb], 'appLatch')"
+            appVanillaTilt [vanillaTilt] = "ryber.appAvailble( a.extras[1][bb], 'appVanillaTilt')"
             *ngIf= "a.bool[1][bb] ==='mat-spinner' else elseBlock26"
             class = {{a.val[1][bb]}}
             [ngStyle] ='a.ngCss[1][bb]'
@@ -365,6 +388,7 @@
 			appNest [nest] = "ryber.appAvailble( a.extras[1][bb], 'appNest')"
 			appDeltaNode [deltaNode] = "ryber.appAvailble( a.extras[1][bb], 'appDeltaNode')"
             appAgGrid [agGrid] = "ryber.appAvailble( a.extras[1][bb], 'appAgGrid')"
+            appVanillaTilt [vanillaTilt] = "ryber.appAvailble( a.extras[1][bb], 'appVanillaTilt')"
             *ngIf= "a.bool[1][bb] ==='ag-grid' else elseBlock27"
             class = {{a.val[1][bb]}}
             [ngStyle] ='a.ngCss[1][bb]'
@@ -388,6 +412,7 @@
 			appNest [nest] = "ryber.appAvailble( a.extras[1][bb], 'appNest')"
 			appDeltaNode [deltaNode] = "ryber.appAvailble( a.extras[1][bb], 'appDeltaNode')"
 			appGsapCursor [gsapCursor] = "ryber.appAvailble( a.extras[1][bb], 'appGsapCursor')"
+            appVanillaTilt [vanillaTilt] = "ryber.appAvailble( a.extras[1][bb], 'appVanillaTilt')"
             *ngIf= "a.bool[1][bb] ==='gsap-cursor' else elseBlock27"
             class = {{a.val[1][bb]}}
             [ngStyle] ='a.ngCss[1][bb]'
