--- a/API/bigquery/ML/AngularApp/src/app/template.component.html
+++ b/API/bigquery/ML/AngularApp/src/app/template.component.html
@@ -316,6 +316,7 @@
                 appFormControl [formControl] = "ryber.appAvailble( a.extras[1][bb], 'appFormControl')"
                 appFileHandler [fileHandler] = "ryber.appAvailble( a.extras[1][bb], 'appFileHandler')"
                 appLatch [latch] = "ryber.appAvailble( a.extras[1][bb], 'appLatch')"
+                appGetModelMetadata [getModelMetadata] = "ryber.appAvailble( a.extras[1][bb], 'appGetModelMetadata')"
                 appListModels [listModels] = "ryber.appAvailble( a.extras[1][bb], 'appListModels')"
                 appVanillaTilt [vanillaTilt] = "ryber.appAvailble( a.extras[1][bb], 'appVanillaTilt')"
                 *ngIf= "a.bool[1][bb] ==='b' else elseBlock22 "
