--- a/API/bigquery/ML/AngularApp/src/app/template.component.html
+++ b/API/bigquery/ML/AngularApp/src/app/template.component.html
@@ -317,8 +317,12 @@
                 appFileHandler [fileHandler] = "ryber.appAvailble( a.extras[1][bb], 'appFileHandler')"
                 appLatch [latch] = "ryber.appAvailble( a.extras[1][bb], 'appLatch')"
                 appGetModelMetadata [getModelMetadata] = "ryber.appAvailble( a.extras[1][bb], 'appGetModelMetadata')"
+                appUpdateModelMetadata [updateModelMetadata] = "ryber.appAvailble( a.extras[1][bb], 'appUpdateModelMetadata')"
                 appListModels [listModels] = "ryber.appAvailble( a.extras[1][bb], 'appListModels')"
                 appVanillaTilt [vanillaTilt] = "ryber.appAvailble( a.extras[1][bb], 'appVanillaTilt')"
+                appCopyModel [copyModel] = "ryber.appAvailble( a.extras[1][bb], 'appCopyModel')"
+                appExportModel [exportModel] = "ryber.appAvailble( a.extras[1][bb], 'appExportModel')"
+                appDeleteModel [deleteModel] = "ryber.appAvailble( a.extras[1][bb], 'appDeleteModel')"
                 *ngIf= "a.bool[1][bb] ==='b' else elseBlock22 "
                 class = {{a.val[1][bb]}}
                 [ngStyle] =  'a.ngCss[1][bb]'
